--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -135,6 +135,13 @@ url = "http://www.sciencedirect.com/science/article/pii/S0031320305000191",
 author = "Charay Lerdsudwichai and Mohamed Abdel-Mottaleb and A-Nasser Ansari"
 }
 
+@misc{itseez2015opencv,
+  title={Open Source Computer Vision Library},
+  author={Itseez},
+  year={2015},
+  howpublished = {\url{https://github.com/itseez/opencv}}
+}
+
 @misc{backgroundsubtractormog,
   title = {BackgroundSubtractorMOG2 Class Definition},
   howpublished = {\url{https://docs.opencv.org/ref/2.4/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html}},
